--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<modules>
+		<module>twitter-to-kafka-service</module>
+	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -9,35 +12,56 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.microservices.demo</groupId>
-	<artifactId>microservices.demo</artifactId>
+	<artifactId>microservices-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>microservices.demo</name>
-	<description>Microservices Demo project for Spring Boot</description>
+	<name>microservices-demo</name>
+	<description>Microservices demo project for Spring Boot</description>
 	<packaging>pom</packaging>
-	
+
 	<properties>
 		<java.version>11</java.version>
 		<spring-boot.version>2.5.2</spring-boot.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+		<twitter4j.version>4.0.7</twitter4j.version>
+		<lombok.version>1.18.16</lombok.version>
 	</properties>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
+				<version>${spring-boot.version}</version>
 			</dependency>
-	
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
+				<version>${spring-boot.version}</version>
 				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>org.junit.vintage</groupId>
+						<artifactId>junit-vintage-engine</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
-		</dependencies>
 
+			<dependency>
+				<groupId>org.twitter4j</groupId>
+				<artifactId>twitter4j-stream</artifactId>
+				<version>${twitter4j.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+				<scope>provided</scope>
+			</dependency>
+
+		</dependencies>
 	</dependencyManagement>
-	
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -48,8 +72,7 @@
 					<release>11</release>
 				</configuration>
 			</plugin>
-		</plugins>		
-	
+		</plugins>
 		<pluginManagement>
 			<plugins>
 				<plugin>
